--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
+    "reactstrap": "^8.1.1",
     "styled-components": "^4.4.1"
   },
   "scripts": {
